# cWave

./: CMakeLists.txt  README.md  main.c
headers/: channel.h  dynarr.h  dynarrExperiment.h  main.h  mixer.h  player.h  simpleInterface.h  wavStream.h  wavedata.h
lib/dynarray/: dynarr.c
src/: CMakeLists.txt  channel.c  dynarr.c  dynarrExperiment.c  mixer.c  player.c  simpleInterface.c  wavStream.c  wavedata.c
